k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hr-suite
  labels:
    name: hr-suite
    environment: production
